--- a/Session2_Pytorch.ipynb
+++ b/Session2_Pytorch.ipynb
@@ -3849,6 +3849,19 @@
         "colab": {}
       },
       "source": [
+        "# The accuracy is very low and probably the convolution is not interpolating the loss correctly "
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "91KoIORCNEYr",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
         ""
       ],
       "execution_count": 0,
