--- a/Session2_Pytorch.ipynb
+++ b/Session2_Pytorch.ipynb
@@ -3844,12 +3844,25 @@
     {
       "cell_type": "code",
       "metadata": {
+        "id": "Ld3k9GeYN6SP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
         "id": "fyO_Ss2do8-C",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        "# The accuracy is very low and probably the convolution is not interpolating the loss correctly "
+        "# The model  accuracy is very low even though loss in the convolution is low. So probably the image testing function is not correct. "
       ],
       "execution_count": 0,
       "outputs": []
