--- a/Session2_Keras.ipynb
+++ b/Session2_Keras.ipynb
@@ -475,6 +475,29 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0AYAalnlN_5V",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "R0faOc-JOBhi",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "Sst4KneiyOL5",
@@ -560,6 +583,19 @@
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-Ckj-pKFOEdY",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# The loss is quiet high in the convolution. So the Accuracy is low and the model is not able to predict correctly."
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
