--- a/Session3_dnn_torch.ipynb
+++ b/Session3_dnn_torch.ipynb
@@ -9169,16 +9169,16 @@
       "metadata": {
         "id": "l8SsMXunS4p5",
         "colab_type": "code",
-        "outputId": "2ad763a2-c10b-40ad-e4d2-a9ddbaabfed0",
+        "outputId": "850366e7-70f5-48eb-c584-a88e7f434f13",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 968
+          "height": 1000
         }
       },
       "source": [
         "for key, value in visualisation.items ():\n",
-        "  #print (visualisation.items ())\n",
-        "  #print(value.cpu ().detach (). numpy ()[0][1])\n",
+        "  print (key, value.shape)\n",
+        " \n",
         "  if len (value.shape) == 4:\n",
         "    if value.shape[1] >= 32:\n",
         "      plot_x, plot_y = 4, 8\n",
@@ -9212,15 +9212,20 @@
         "      #print(value.shape[2])\n",
         "      #print('nnn')"
       ],
-      "execution_count": 108,
+      "execution_count": 111,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
+            "Conv2d(1, 32, kernel_size=(11, 11), stride=(1, 1)) torch.Size([1, 32, 18, 18])\n",
             "4 8\n",
+            "MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False) torch.Size([1, 32, 9, 9])\n",
             "4 8\n",
+            "Conv2d(32, 10, kernel_size=(7, 7), stride=(1, 1)) torch.Size([1, 10, 3, 3])\n",
             "2 5\n",
+            "MaxPool2d(kernel_size=2, stride=2, padding=0, dilation=1, ceil_mode=False) torch.Size([1, 10, 1, 1])\n",
             "2 5\n",
+            "Linear(in_features=10, out_features=10, bias=True) torch.Size([1, 10])\n",
             "1 1\n"
           ],
           "name": "stdout"
